unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterItems>
            <field>Fleet__c.Rental_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <filterItems>
            <field>Fleet__c.WIP_Asset__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Fleet__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>