unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Unit_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Unit_Dimensions__c</fullName>
    <label>Unit Dimensions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12x68</fullName>
            </value>
            <value>
                <fullName>12x56</fullName>
            </value>
            <value>
                <fullName>12x60</fullName>
            </value>
            <value>
                <fullName>12x64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>