unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Unit_Length__c.field-meta.xml
<CustomField>
    <fullName>Unit_Length__c</fullName>
    <label>Unit Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>