unpackaged/main/default/objects/SBQQ__ProductOption__c/validationRules/SBQQ__Cannot_Bundle_Evergreen_Renewable_SKUs.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Cannot_Bundle_Evergreen_Renewable_SKUs</fullName>
    <active>false</active>
    <description>The Evergreen and Renewable bundle cannot coexist in a bundle</description>
    <errorConditionFormula>AND(OR(AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , 'Evergreen'), ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,'Renewable')),AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , 'Renewable'),ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,'Evergreen'))))</errorConditionFormula>
    <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
</ValidationRule>